# Personal-Projects

./: .gitignore  README.md
Bugzilla/: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.docker.txt  requirements.txt
Bugzilla/.dvc/: config
Bugzilla/.github/workflows/: ci.yml
Bugzilla/docs/: canvas.md  mkdocs.yml
Bugzilla/docs/docs/: index.md
Bugzilla/loadtest/: locustfile.py
Bugzilla/monitoring/prometheus/: prometheus.yml
Bugzilla/naplace/: config.py  dataset.py  labeling.py
Bugzilla/naplace/api/: inference.py  main.py  models.py
Bugzilla/naplace/cli/: check_dataset.py  convert_bugbug.py  prepare.py  split.py
Bugzilla/naplace/modeling/: baseline_tfidf.py  eval_seq.py  eval_setfit.py  predict.py  setfit_model.py  train_gru.py  train_lstm.py
Bugzilla/naplace/observability/: metrics.py
Bugzilla/naplace/ui/: gradio.py
Bugzilla/reports/: metrics_baseline_tfidf.json  metrics_setfit_component.json  metrics_setfit_eval.json  metrics_tfidf_sgd.json
Bugzilla/scripts/: alibi_detect_drift.py  eval_api.py  eval_setfit.py  select_best.py  summarize_gx_results.py  train_baseline_tfidf.py  train_setfit.py  train_tfidf_sgd.py  validate_data_deepchecks.py  validate_data_gx.py
Bugzilla/tests/: test_api.py  test_behavioral_model.py  test_cli_prepare_unit.py  test_cli_split_unit.py  test_config_paths.py  test_imports.py  test_smoke_api.py
HateSpeechDetector/: Nlp_Notebook.ipynb
Ingegneria del Software/: README.md  app.py
(+95 files in other folders)
